chore: update registry settings

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@netflix-internal:registry=https://artifacts.netflix.com/api/npm/npm-local/
+registry = https://repo.test.netflix.net/artifactory/api/npm/npm-netflix/
+email = artifactoryadmins@netflix.com
