--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@netflix/element-theme",
+  "private": true,
   "version": "2.11.1",
   "description": "Netflix-specific customizations to the Element UI design system styles",
   "main": "lib/index.css",
@@ -17,5 +18,9 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-sass": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
