--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "dev": "gulp dev",
-    "build": "gulp build"
+    "build": "gulp build",
+    "test": "exit 0"
   },
   "license": "Apache-2.0",
   "devDependencies": {
