--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netflix/element-theme",
-  "version": "2.11.1-alpha",
+  "version": "2.11.0",
   "description": "Netflix-specific customizations to the Element UI design system styles",
   "main": "lib/index.css",
   "files": [
